package quizmos.exception;

public class QuizMosFileException extends QuizMosException{
    public QuizMosFileException(String message) {
        super(message);
    }

}
