@startuml CommonsComponent_ClassDiagram

title Commons Component Class Diagram

skinparam classAttributeIconSize 0
skinparam classBackgroundColor #E6FFE6
skinparam packageStyle rectangle
skinparam shadowing false

package "commons.exception" {
    class QuizMosException

    class QuizMosFileException

    class QuizMosInputException

    class QuizMosLogicException
}

package "commons.common" {
    class Messages

    class FlashcardMessages

    class FlashcardListMessages

    class ReviewMessages
}

/' Inheritance arrows '/
QuizMosFileException --|> QuizMosException
QuizMosInputException --|> QuizMosException
QuizMosLogicException --|> QuizMosException
QuizMosException --|> "java.lang.Exception"

@enduml
